--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7473,7 +7473,9 @@ button.bg-dark:focus {
 .h-75 {
   height: 75% !important;
 }
-
+.h-85 {
+  height: 85% !important;
+}
 .h-100 {
   height: 100% !important;
 }
@@ -10261,3 +10263,15 @@ body {
 
 .fixed-bottom .fixed-top { margin-bottom:1rem;}
 .main-container {padding-top: 3.5rem!important;}
+table,
+thead,
+tr,
+tbody,
+th,
+td {
+  text-align: center;
+}
+
+.table td {
+  text-align: center;
+}
