--- a/resources/scss/custom.scss
+++ b/resources/scss/custom.scss
@@ -1,11 +1,14 @@
 .jumbotron {
-    padding: 2rem 1rem;
+    padding-bottom: 1rem;
     margin-bottom: 2rem;
     background-color: #e9ecef;
     border-radius: 0.3rem;
   }
-  @media (min-width: 576px) {
-    .jumbotron {
-      padding: 4rem 2rem;
+
+ #layoutSidenav_content{
+    main {
+        div:first-child[class~=container] {
+          padding-top: 3rem!important;
+        }
     }
   }
