padding-top issue fix for 1st div

--- a/resources/scss/custom.scss
+++ b/resources/scss/custom.scss
@@ -1,14 +1,7 @@
 .jumbotron {
     padding-bottom: 1rem;
+    padding-top: 2rem;
     margin-bottom: 2rem;
     background-color: #e9ecef;
     border-radius: 0.3rem;
-  }
-
- #layoutSidenav_content{
-    main {
-        div:first-child[class~=container] {
-          padding-top: 3rem!important;
-        }
-    }
   }
